[tool.poetry]
name = "stateforward"
version = "0.1.2"
description = ""
authors = ["leonwilly101 <leonwilly101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
picologging = "^0.9.3"



[tool.poetry.group.dev.dependencies]
pdoc = "^14.1.0"
black = "^23.11.0"
mkdocstrings = "^0.23.0"
mkdocs-gen-files = "^0.5.0"
mkdocstrings-python = "^1.7.4"
mkdocs-material = "^9.4.8"
pygments = "^2.16.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
