[tool.poetry]
name = "stateforward"
version = "0.2.95"
description = ""
authors = ["Gabriel Willen <gabewillen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
picologging = "^0.9.3"
pytest = "^7.4.3"
ruff = "^0.1.8"
ruff-lsp = "^0.0.47"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
pydocstyle.convention = "google"